--- a/app/templates/presenter_login.handlebars
+++ b/app/templates/presenter_login.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
 <div class="span4">&nbsp;</div>
 <div class="span4 well">
-	Alfresco Credentials for {{App.user.name}}
+	Alfresco Credentials
 	
 	<p>
 		{{view Em.TextField class="input span4" placeholder="Login" valueBinding="App.user.alf_login"}}
