Checkpoint: Clicking on site name triggers getDocList correctly.
Updated alfresco.js

--- a/app/templates/presenter_document_select.handlebars
+++ b/app/templates/presenter_document_select.handlebars
@@ -1,4 +1,4 @@
 <h1>Select Site</h1>
 {{#each content}}
-	{{#view Em.View contentBinding="this"}}{{content.title}}{{/view}}
+	{{#view App.ContentSelectorView contentBinding="this"}}{{content.title}}{{/view}}
 {{/each}}
