--- a/app/templates/presenter_document_select.handlebars
+++ b/app/templates/presenter_document_select.handlebars
@@ -1,4 +1,13 @@
-<h1>Select Site</h1>
-{{#each content}}
-	{{#view App.ContentSelectorView contentBinding="this"}}{{content.title}}{{/view}}
-{{/each}}
+<h1>Select Document</h1>
+<h2>Total Items: {{content.length}}</h2>
+{{#if content.length}}
+    <h2>Folders</h2>
+    {{#each content.folders}}
+        {{#view App.ContentSelectorView contentBinding="this"}}{{content.name}}{{/view}}
+    {{/each}}
+    <h2>Documents</h2>
+    {{#each content.documents}}
+        {{#view App.ContentSelectorView contentBinding="this"}}{{content.name}}{{/view}}
+    {{/each}}
+{{/if}}
+
