Site and Folder Navigation Work Correctly
Document selection not yet implemented.

--- a/app/templates/main_page.handlebars
+++ b/app/templates/main_page.handlebars
@@ -2,13 +2,13 @@
 	<div class="span4">&nbsp;</div>
 	<div class="span4 well">
 		<p>
-			{{view Em.TextField class="input full-width" valueBinding="App.stateManager.user.name" placeholder="Your Name"}}
+			{{view Ember.TextField class="input full-width" valueBinding="App.stateManager.user.name" placeholder="Your Name"}}
 		</p>
 		<p>
-			{{#view Em.Button action="showPresenterLogin" target="App.stateManager" class="btn btn-large btn-primary full-width"}}<i class="modern-icon modern-icon-white">S</i> I'm Presenting{{/view}}
+			{{#view Ember.Button action="showPresenterLogin" target="App.stateManager" class="btn btn-large btn-primary full-width"}}<i class="modern-icon modern-icon-white">S</i> I'm Presenting{{/view}}
 		</p>
 		<p>
-			{{#view Em.Button class="btn btn-large btn-primary full-width"}}<i class="modern-icon modern-icon-white">E</i> I'm Viewing{{/view}}
+			{{#view Ember.Button class="btn btn-large btn-primary full-width"}}<i class="modern-icon modern-icon-white">E</i> I'm Viewing{{/view}}
 		</p>
 	</div>
 	<div class="span4"/>&nbsp;</div>
