--- a/app/templates/presenter_login.handlebars
+++ b/app/templates/presenter_login.handlebars
@@ -4,7 +4,7 @@
 	Alfresco Credentials
 	
 	<p>
-		{{view Ember.TextField class="input full-width" placeholder="Login" valueBinding="App.stateManager.user.alf_login"}}
+		{{view Ember.TextField class="input full-width" placeholder="Login" valueBinding="App.stateManager.user.alf_login" focus="true"}}
 	</p>
 	<p>
 		{{view Ember.TextField class="input full-width" placeholder="Password" type="password" valueBinding="App.stateManager.user.alf_password"}}
