--- a/app/css/responsive.less
+++ b/app/css/responsive.less
@@ -56,7 +56,7 @@
   .uneditable-input {
     display: block;
     width: 100%;
-    height: 28px; /* Make inputs at least the height of their button counterpart */
+    //height: 28px; /* Make inputs at least the height of their button counterpart */
     /* Makes inputs behave like true block-level elements */
     -webkit-box-sizing: border-box; /* Older Webkit */
        -moz-box-sizing: border-box; /* Older FF */
@@ -123,7 +123,7 @@
 // LANDSCAPE PHONE TO SMALL DESKTOP & PORTRAIT TABLET
 // --------------------------------------------------
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   // GRID & CONTAINERS
   // -----------------
   // Remove width from containers
@@ -155,7 +155,7 @@
 
 // PORTRAIT TABLET TO DEFAULT DESKTOP
 // ----------------------------------
-/*
+
 @media (min-width: 768px) and (max-width: 980px) {
 
   // Fixed grid
@@ -168,7 +168,7 @@
   #inputGridSystem > .generate(12, 42px, 20px);
 
 }
-*/
+
 
 
 // TABLETS AND BELOW
