--- a/app/templates/document_viewer.handlebars
+++ b/app/templates/document_viewer.handlebars
@@ -1,6 +1,2 @@
-Document Viewer
 
-{{#each content}}
-    {{#view PDF.PageView contentBinding="this"}}.{{/view}}
-        <hr/>
-{{/each}}
+    {{#view App.SwipeItemView content="this"}}.{{/view}}
