Checkpoint: Now.js Session Creation and Page Change Propagation

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -41,7 +41,7 @@ a {
 .alf-nav-brand {
 	float: right;
 	background-image: url(/assets/img/alf-30px.png);
-    //background-size: 94%;
+    background-size: 94%;
     background-repeat: no-repeat;
 	width: 104px;
 	margin-top: 5px;
@@ -82,4 +82,8 @@ a {
   position: absolute;
   top: 0px;
   width: 100%;
+}
+
+.btn-navbar a {
+	padding: 4px 10px 4px 0px !important;
 }
