--- a/app/css/responsive.less
+++ b/app/css/responsive.less
@@ -195,7 +195,7 @@
     width: auto;
     padding: 0;
   }
-*/
+
   // Account for brand name
   .navbar .brand {
     padding-left: 10px;
@@ -283,11 +283,13 @@
     display: block;
   }
 
-  // Hide everything in the navbar save .brand and toggle button */
+  // Hide everything in the navbar save .brand and toggle button 
   .nav-collapse {
     overflow: hidden;
     height: 0;
   }
+  */
+
 }
 
 
