--- a/app/templates/main_page.handlebars
+++ b/app/templates/main_page.handlebars
@@ -8,7 +8,7 @@
 			{{#view Ember.Button action="showPresenterLogin" target="App.stateManager" class="btn btn-large btn-primary full-width"}}<i class="modern-icon modern-icon-white">S</i> I'm Presenting{{/view}}
 		</p>
 		<p>
-			{{#view Ember.Button class="btn btn-large btn-primary full-width"}}<i class="modern-icon modern-icon-white">E</i> I'm Viewing{{/view}}
+			{{#view Ember.Button action="showSessionSelect" target="App.stateManager" class="btn btn-large btn-primary full-width"}}<i class="modern-icon modern-icon-white">E</i> I'm Viewing{{/view}}
 		</p>
 	</div>
 	<div class="span4"/>&nbsp;</div>
